tests/snapshots/integration_gateway__open.snap
---
source: tests/integration_gateway.rs
expression: output
---
# Advanced Topics

## Performance

Performance tips here.
