tests/snapshots/integration_gateway__open_max_lines.snap
---
source: tests/integration_gateway.rs
expression: output
---
# Advanced Topics

## Performance
... (2 more lines)
