tests/snapshots/integration_gateway__outline_level_2.snap
---
source: tests/integration_gateway.rs
expression: output
---
SKILL.md
  # Test Skill
    ## Getting Started
    ## API Reference

docs/advanced.md
  # Advanced Topics
    ## Performance
