tests/snapshots/integration_gateway__outline_with_index.snap
---
source: tests/integration_gateway.rs
expression: output
---
SKILL.md
  # Test Skill
    ## Getting Started
      ### Prerequisites
    ## API Reference

docs/advanced.md
  # Advanced Topics
    ## Performance
