tests/snapshots/integration_gateway__show_max_lines.snap
---
source: tests/integration_gateway.rs
expression: output
---
## Getting Started

Intro text.
... (5 more lines)
