tests/snapshots/integration_gateway__show_with_index.snap
---
source: tests/integration_gateway.rs
expression: output
---
## Getting Started

Intro text.

### Prerequisites

You need these things.
