tests/snapshots/integration_gateway__sources_depth_1.snap
---
source: tests/integration_gateway.rs
expression: output
---
test-skill/
├── docs/
│   └── advanced.md
└── SKILL.md
