tests/snapshots/integration_gateway__sources_json.snap
---
source: tests/integration_gateway.rs
expression: output
---
[
  {
    "path": "docs",
    "type": "dir"
  },
  {
    "path": "docs/advanced.md",
    "type": "file"
  },
  {
    "path": "SKILL.md",
    "type": "file"
  }
]
