tests/snapshots/integration_gateway__sources_limit.snap
---
source: tests/integration_gateway.rs
expression: output
---
test-skill/
├── docs/
│   └── advanced.md
... (1 more)
